# MarketAI

./: README.md  daily_task_logger.py  gpt_assistant.py  main.py  market_bias.py  pyproject.toml  requirements.txt  sms_sender.py  task_manager.py  test.py
data/: tasks.json
